--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+GOOGLE_ID=961323777614-4641luipeqthdfdub2lp4r4loljhmmb4.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 DATABASE_URL="mysql://root@localhost:3306/next_shop_db"
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET="LqZJdmUwlnt4zjZ/z7WyMOCq4PN4oiyV/vTQXUrNTXU="
