--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
 GOOGLE_ID=961323777614-4641luipeqthdfdub2lp4r4loljhmmb4.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+LINE_CLIENT_ID=1661391975
+LINE_CLIENT_SECRET=1005669388fd7905f6583ce9a063fae5
+
+
+
 DATABASE_URL="mysql://root@localhost:3306/next_shop_db"
+
+
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
