--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+BASE_URL=http://localhost:3000
+
+
 GOOGLE_ID=961323777614-4641luipeqthdfdub2lp4r4loljhmmb4.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
